Fixed data overflow on the flashcards

--- a/triviasite/static/main.css
+++ b/triviasite/static/main.css
@@ -44,13 +44,16 @@ body {
     font-weight: 500;
     background: #ffffff;
     width: 100%;
-    height: 100px;
+    min-height: 100px;
+    height: auto;
     border: 3px solid #ccc;
     border-radius: 5px;
     position: relative;
-    perspective: 1000px;
-    margin-bottom: 20px;
+    perspective: 500px;
+    margin-bottom: 15px;
     text-align: center;
+
+    
 
 
 }
@@ -126,6 +129,7 @@ body {
     height: 100%;
     backface-visibility: hidden;
     transition: transform 0.6s;
+    overflow: auto;
 }
 
 .front {
